package com.mikaservices.platform.common.enums

enum class StatutDepense {
    BROUILLON,
    SOUMISE,
    VALIDEE,
    REJETEE,
    PAYEE
}
