package com.mikaservices.platform.common.enums

enum class TypeDepense {
    MAIN_OEUVRE,
    MATERIEL,
    MATERIAUX,
    SOUS_TRAITANCE,
    TRANSPORT,
    CARBURANT,
    LOCATION_ENGIN,
    FRAIS_GENERAUX,
    ASSURANCE,
    ETUDES,
    AUTRE
}
